--- a/step7.html
+++ b/step7.html
@@ -12,7 +12,7 @@
       padding: 60px 20px;
     }
     .container {
-      max-width: 800px;
+      max-width: 600px;
       margin: auto;
       background: white;
       padding: 40px;
@@ -31,12 +31,12 @@
       height: 180px;
     }
     p {
-      font-size: 36px;
+      font-size: 18px;
       margin-top: 20px;
     }
     .home-btn {
       margin-top: 30px;
-      font-size: 36px;
+      font-size: 18px;
       padding: 12px 24px;
       border: none;
       border-radius: 10px;
@@ -75,7 +75,7 @@
 
     function goHome() {
       localStorage.clear();
-      location.href = 'index.html';
+      location.href = 'snubh.html';
     }
   </script>
 </body>
